--- a/index.html
+++ b/index.html
@@ -13,33 +13,8 @@
         <!-- Блокзаголовку -->
         <div class="title">Товари на які діє знижкка </div>
         <!-- Блок товарів -->
-        <div class="items">
-            <div class="item">
-                <!-- Блок назва товару -->
-                <div class="item-title">Мотокоса 43</div>
-                <!-- Блок зображення товару -->
-                <div class="item-image">
-                    <img src="img/motocosa.png" alt="Мотокоса 43">
-                </div>
-                <!-- Блок з оплатою частинами -->
-                <div class="parts-pay">
-                    <div><img src="img/mono-lapka.png" alt="">6</div>
-                    <div><img src="img/pb.png" alt="">8</div>
-                </div>
-                <!-- Блок ціни -->
-                <div class="price">
-                    <div><span>5499 </span><sup>грн</sup></div>
-                    <div><span>4497 </span><sup>грн</sup></div>
-                </div>
-                <!-- Блок бонуснї ціни -->
-                <div class="price bonus">
-                    <div>ціна за купоном</div>
-                    <div><span>4395</span><sup>грн</sup></div>
-                </div>
-
-                <div class="item">Тример</div>
-                <div class="item">Газонокосарка</div>
-                <div class="item">Оприскувач</div>
+        <div id="items" class="items">
+            
             </div>
             <!-- Блок контактів -->
             <div class="contacts">
@@ -58,6 +33,8 @@
                 corporis aspernatur perspiciatis officia, non nesciunt.
             </div>
     </content>
+
+    <script src="market.js"></script>
 </body>
 
 </html>
