--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             </div>
     </content>
 
-    <script src="market.js"></script>
+    <script src="/js/market.js"></script>
+    <script src="/js/items.json"></script>
 </body>
 
 </html>
