--- a/index.html
+++ b/index.html
@@ -14,24 +14,17 @@
         <div class="title">Товари на які діє знижкка </div>
         <!-- Блок товарів -->
         <div id="items" class="items">
-            
+
+        </div>
+        <!-- Модальне вікно -->
+        <div id="modal" class="modal">
+            <div class="modal-content">
+                <span class="close" onclick="document.getElementById('modal').style.display='none'">&times;</span>
+                <h2 id="modal-title"></h2>
+                <p id="modal-description"></p>
             </div>
-            <!-- Блок контактів -->
-            <div class="contacts">
-                <p>ЖИТОМИР</p>
-                <p>вул. Криївська, 106</p>
-                <p> &nbsp;+38 (067) 414-53-30*</p>
-            </div>
-            <!-- Блок інформації -->
-            <div class="lisense">
-                *Знижка врозмірі сто грн діє з Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, sunt.
-                Minima, placeat nemo. Quia, sapiente ratione. Nemo eaque saepe fugiat libero voluptatibus ex enim
-                laborum
-                fugit perspiciatis, incidunt dolores Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
-                eius
-                vel minus expedita corrupti eveniet nulla minima sequi esse, veritatis odio, beatae nostrum consequuntur
-                corporis aspernatur perspiciatis officia, non nesciunt.
-            </div>
+        </div>
+
     </content>
 
     <script src="/js/market.js"></script>
