--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <content>
         <!-- Блокзаголовку -->
-        <div class="title">Товари на які діє знижкка </div>
+        <div class="title">Міфічні істоти</div>
         <!-- Блок товарів -->
         <div id="items" class="items">
 
@@ -21,7 +21,10 @@
             <div class="modal-content">
                 <span class="close" onclick="document.getElementById('modal').style.display='none'">&times;</span>
                 <h2 id="modal-title"></h2>
+                <img id="modal-image" src="" alt="" />
                 <p id="modal-description"></p>
+
+
             </div>
         </div>
 
